[package]
name = "server"
version = "0.1.0"
authors = ["0zark <siddhant@hey.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
async-std = { version = "1.6.3", features = ["attributes"] }
dotenv = "0.15.0"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
handlebars = { version = "3.4.0", features = ["dir_source"] }
percent-encoding = "2.1.0"
serde = "1.0.115"
tide = "0.13.0"