[package]
name = "server"
version = "0.1.0"
authors = ["0zark <siddhant@hey.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
async-std = { version = "1.6.3", features = ["attributes"] }
async-trait = "0.1.40"
bytesize = "1.0.1"
dotenv = "0.15.0"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
handlebars = { version = "3.4.0", features = ["dir_source"] }
hex = "0.4.2"
lazy_static = "1.4.0"
libsqlite3-sys = "0.20.0"
percent-encoding = "2.1.0"
rusqlite = { version = "0.24.0", features = ["bundled"] }
serde = "1.0.115"
sha2 = "0.9.1"
tide = "0.13.0"