[package]
name = "server"
version = "0.1.0"
authors = ["Sid <siddhant@hey.com>"]
edition = "2018"

[dependencies]
actix-files = "0.3.0"
actix-rt = "1.1.1"
actix-identity = "0.3.0"
actix-web = "3.0.1"
bytesize = "1.0.1"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
handlebars = { version = "3.4.0", features = ["dir_source"] }
hex = "0.4.2"
lazy_static = "1.4.0"
libsqlite3-sys = "0.20.0"
rusqlite = { version = "0.24.0", features = ["bundled"] }
serde = "1.0.116"
serde_json = "1.0.57"
sha2 = "0.9.1"
thiserror = "1.0.20"

streamgen = { path = "../streamgen" }